--- a/tailwind.css
+++ b/tailwind.css
@@ -2,10 +2,76 @@
 @source "./ui/*.templ";
 @plugin "@tailwindcss/typography";
 @plugin "daisyui" {
-    themes:
-        dim --default,
-        light;
     exclude: rootscrollgutter;
+}
+@plugin "daisyui/theme" {
+    name: "dim";
+    default: true;
+    prefersdark: true;
+    color-scheme: "dark";
+    --color-base-100: oklch(30.857% 0.023 264.149);
+    --color-base-200: oklch(28.036% 0.019 264.182);
+    --color-base-300: oklch(26.346% 0.018 262.177);
+    --color-base-content: oklch(82.901% 0.031 222.959);
+    --color-primary: oklch(86.133% 0.141 139.549);
+    --color-primary-content: oklch(17.226% 0.028 139.549);
+    --color-secondary: oklch(73.375% 0.165 35.353);
+    --color-secondary-content: oklch(14.675% 0.033 35.353);
+    --color-accent: oklch(74.229% 0.133 311.379);
+    --color-accent-content: oklch(14.845% 0.026 311.379);
+    --color-neutral: oklch(24.731% 0.02 264.094);
+    --color-neutral-content: oklch(82.901% 0.031 222.959);
+    --color-info: oklch(86.078% 0.142 206.182);
+    --color-info-content: oklch(17.215% 0.028 206.182);
+    --color-success: oklch(86.171% 0.142 166.534);
+    --color-success-content: oklch(17.234% 0.028 166.534);
+    --color-warning: oklch(86.163% 0.142 94.818);
+    --color-warning-content: oklch(17.232% 0.028 94.818);
+    --color-error: oklch(82.418% 0.099 33.756);
+    --color-error-content: oklch(16.483% 0.019 33.756);
+    --radius-selector: 1rem;
+    --radius-field: 0.5rem;
+    --radius-box: 1rem;
+    --size-selector: 0.3125rem;
+    --size-field: 0.3125rem;
+    --border: 1px;
+    --depth: 0;
+    --noise: 0;
+}
+
+@plugin "daisyui/theme" {
+    name: "light";
+    default: false;
+    prefersdark: false;
+    color-scheme: "light";
+    --color-base-100: oklch(100% 0 0);
+    --color-base-200: oklch(98% 0 0);
+    --color-base-300: oklch(95% 0 0);
+    --color-base-content: oklch(21% 0.006 285.885);
+    --color-primary: oklch(45% 0.24 277.023);
+    --color-primary-content: oklch(93% 0.034 272.788);
+    --color-secondary: oklch(65% 0.241 354.308);
+    --color-secondary-content: oklch(94% 0.028 342.258);
+    --color-accent: oklch(77% 0.152 181.912);
+    --color-accent-content: oklch(38% 0.063 188.416);
+    --color-neutral: oklch(14% 0.005 285.823);
+    --color-neutral-content: oklch(92% 0.004 286.32);
+    --color-info: oklch(74% 0.16 232.661);
+    --color-info-content: oklch(29% 0.066 243.157);
+    --color-success: oklch(76% 0.177 163.223);
+    --color-success-content: oklch(37% 0.077 168.94);
+    --color-warning: oklch(82% 0.189 84.429);
+    --color-warning-content: oklch(41% 0.112 45.904);
+    --color-error: oklch(71% 0.194 13.428);
+    --color-error-content: oklch(27% 0.105 12.094);
+    --radius-selector: 0.5rem;
+    --radius-field: 0.25rem;
+    --radius-box: 0.5rem;
+    --size-selector: 0.3125rem;
+    --size-field: 0.3125rem;
+    --border: 1px;
+    --depth: 1;
+    --noise: 0;
 }
 
 .text-scale {
@@ -13,11 +79,11 @@
 }
 
 .btn-scale {
-    @apply btn-xl lg:btn-lg;
+    @apply btn-xl lg:btn-md;
 }
 
 .btn-icon-scale {
-    @apply btn-xl lg:btn-md;
+    @apply btn-xl lg:btn-sm;
 }
 
 .code-container {
@@ -25,7 +91,7 @@
 }
 
 .copy-button {
-    @apply absolute top-2 right-2 btn btn-lg lg:btn-xs btn-soft text-base-content/50 font-medium;
+    @apply absolute top-2 right-2 btn btn-md lg:btn-xs btn-soft text-base-content/50 font-medium;
 }
 
 .menu-item {
@@ -42,7 +108,7 @@ h6 {
 }
 
 .header-link {
-    @apply btn btn-lg lg:btn-sm btn-soft btn-square text-base-content/50 text-4xl lg:text-xl font-bold mr-4;
+    @apply btn btn-md lg:btn-xs btn-soft btn-square text-base-content/50 text-4xl lg:text-xl font-bold mr-4;
 }
 
 html {
