--- a/ui/menu.templ
+++ b/ui/menu.templ
@@ -31,12 +31,10 @@ templ Menu(props []MenuGroupProps) {
 	}}
 	<div class="flex flex-col">
 		<div class="navbar px-4">
-			@gong.NewLink("/") {
-				<div class="flex flex-row place-items-center gap-2 cursor-pointer">
-					<image src="/public/icon.png" class="size-18 lg:size-14"></image>
-					<div class="text-4xl lg:text-2xl font-bold">Gong</div>
-				</div>
-			}
+			<a href="/" class="flex flex-row place-items-center gap-2 cursor-pointer">
+				<image src="/public/icon.png" class="size-18 lg:size-14"></image>
+				<div class="text-4xl lg:text-2xl font-bold">Gong</div>
+			</a>
 		</div>
 		<ul class="menu rounded-box w-full text-scale">
 			for _, group := range props {
