--- a/ui/document.templ
+++ b/ui/document.templ
@@ -27,7 +27,7 @@ func NewDocumentComponent(
 
 templ (c DocumentComponent) View() {
 	<div class="flex flex-row w-full h-full">
-		<div class="flex flex-col gap-4 place-items-center grow min-w-0 w-7xl overflow-y-auto scroll-smooth px-4 py-4 max-w-7xl">
+		<div class="flex flex-col gap-4 place-items-center grow min-w-0 w-7xl overflow-y-auto scroll-smooth p-4 max-w-7xl">
 			<div class="prose max-w-full w-full pb-4 text-scale">
 				@templ.ComponentFunc(func(ctx context.Context, w io.Writer) error {
 					_, err := io.WriteString(w, c.doc.Html())
