--- a/ui/landing.templ
+++ b/ui/landing.templ
@@ -2,7 +2,9 @@ package ui
 
 import "github.com/troygilman/gong"
 
-type LandingPageComponent struct{}
+type LandingPageComponent struct {
+	Navbar gong.Component
+}
 
 templ (c LandingPageComponent) Head() {
 	@head()
@@ -10,7 +12,7 @@ templ (c LandingPageComponent) Head() {
 
 templ (c LandingPageComponent) View() {
 	<div class="flex flex-col w-screen h-screen">
-		@navbar()
+		@c.Navbar
 		<div class="flex flex-col grow min-h-0 w-full">
 			<div class="flex flex-col place-items-center justify-center w-full h-full gap-12">
 				<div class="flex flex-row gap-6">
