--- a/ui/root.templ
+++ b/ui/root.templ
@@ -3,7 +3,8 @@ package ui
 import "github.com/troygilman/gong"
 
 type RootView struct {
-	Menu gong.Component
+	Menu   gong.Component
+	Navbar gong.Component
 }
 
 templ (view RootView) Head() {
@@ -28,7 +29,7 @@ templ (view RootView) View() {
 		<div class="drawer lg:drawer-open w-fit h-full bg-base-100" x-data>
 			<input id="my-drawer" type="checkbox" class="drawer-toggle"/>
 			@view.drawerSide()
-			@drawerContent()
+			@view.drawerContent()
 		</div>
 	</div>
 }
@@ -42,32 +43,13 @@ templ (view RootView) drawerSide() {
 	</div>
 }
 
-templ drawerContent() {
+templ (view RootView) drawerContent() {
 	<div class="drawer-content overflow-y-hidden">
 		<div class="flex flex-col w-full h-full">
-			@navbar()
+			@view.Navbar
 			<div id="outlet-container" class="flex grow w-full max-w-full min-h-0 justify-center">
 				@gong.NewOutlet().WithAttrs(templ.Attributes{"class": "w-full h-full"})
 			</div>
-		</div>
-	</div>
-}
-
-templ navbar() {
-	<div class="navbar flex justify-between min-h-18 px-4">
-		<div>
-			<label for="my-drawer" class="btn btn-square btn-ghost btn-icon-scale p-1 drawer-button lg:hidden">
-				@sidebarIcon("inline-block w-full h-full fill-current")
-			</label>
-		</div>
-		<div class="flex gap-4">
-			@gong.NewLink("/docs").WithAttrs(templ.Attributes{"class": "btn btn-icon-scale btn-ghost"}) {
-				Docs
-			}
-			@themeController()
-			<a class="btn btn-square btn-ghost btn-icon-scale p-1" href="https://github.com/troygilman/gong">
-				@githubIcon("inline-block w-full h-full fill-current")
-			</a>
 		</div>
 	</div>
 }
