--- a/ui/icons.templ
+++ b/ui/icons.templ
@@ -42,3 +42,16 @@ templ moonIcon(class string) {
 		></path>
 	</svg>
 }
+
+templ searchIcon(class string) {
+	<svg class={ class } xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+		<g
+			stroke-linejoin="round"
+			stroke-linecap="round"
+			stroke-width="2.5"
+		>
+			<circle cx="11" cy="11" r="8"></circle>
+			<path d="m21 21-4.3-4.3"></path>
+		</g>
+	</svg>
+}
