--- a/ui/search.templ
+++ b/ui/search.templ
@@ -6,30 +6,29 @@ import "net/http"
 type SearchComponent struct{}
 
 templ (c SearchComponent) View() {
-	<div class="dropdown">
-		@gong.NewForm().
-			WithMethod(http.MethodGet).
-			WithSwap(gong.SwapInnerHTML).
-			WithTrigger("input changed delay:200ms") {
-			<label id="search-label" for="search-input" class="input input-sm !outline-none">
-				@searchIcon("size-4 fill-none stroke-current/50")
-				<input
-					id="search-input"
-					type="search"
-					name="q"
-					placeholder="Search"
-					autocomplete="off"
-					aria-autocomplete="list"
-					aria-controls="search-listbox"
-					aria-labelledby="search-label"
-					class="w-14 focus:w-48 transition-all"
-				/>
-			</label>
-		}
+	@gong.NewForm().
+		WithMethod(http.MethodGet).
+		WithSwap(gong.SwapInnerHTML).
+		WithTrigger("input changed delay:200ms").
+		WithAttrs(templ.Attributes{"class": "dropdown group"}) {
+		<label id="search-label" for="search-input" class="input input-sm !outline-none">
+			@searchIcon("size-4 fill-none stroke-current/50")
+			<input
+				id="search-input"
+				type="search"
+				name="q"
+				placeholder="Search"
+				autocomplete="off"
+				aria-autocomplete="list"
+				aria-controls="search-listbox"
+				aria-labelledby="search-label"
+				class="w-14 group-focus-within:w-48 transition-all"
+			/>
+		</label>
 		@gong.NewTarget() {
 			@c.searchOptions([]SearchOption{})
 		}
-	</div>
+	}
 }
 
 templ (c SearchComponent) Action() {
