Add Alpine.js and enhance search interactions

--- a/ui/root.templ
+++ b/ui/root.templ
@@ -19,6 +19,7 @@ templ head() {
 		<link rel="icon" type="image/png" href="/public/icon.png"/>
 		<link id="prism-stylesheet" href="/public/prism-dark.css" rel="stylesheet"/>
 		<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
+		<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
 		<script src="/public/prism.js"></script>
 		@initScript()
 	</head>
