Add Alpine.js initialization on htmx swaps and improve search options

--- a/ui/root.templ
+++ b/ui/root.templ
@@ -112,5 +112,11 @@ templ initScript() {
         Prism.highlightAllUnder(event.detail.fragment);
         addCopyButtons(event.detail.fragment);
     });
+    document.addEventListener('htmx:afterSwap', function(event) {
+        if (window.Alpine) {
+            console.log('initializing alpine tree')
+            Alpine.initTree(event.detail.elt);
+        }
+      });
     </script>
 }
