Update search input to use text type and responsive sizing

--- a/ui/search.templ
+++ b/ui/search.templ
@@ -26,12 +26,12 @@ templ (c SearchComponent) View() {
 			<label
 				id="search-label"
 				for="search-input"
-				class="input input-sm !outline-none"
+				class="input input-lg lg:input-sm !outline-none"
 			>
 				@searchIcon("size-4 fill-none stroke-current/50")
 				<input
 					id="search-input"
-					type="search"
+					type="text"
 					name="q"
 					placeholder="Search"
 					autocomplete="off"
