--- a/ui/search.templ
+++ b/ui/search.templ
@@ -65,7 +65,7 @@ templ (c SearchComponent) Action() {
 templ (c SearchComponent) searchOptions(chunks []document.DocumentChunk) {
 	if len(chunks) > 0 {
 		<ul
-			class="menu dropdown-content bg-base-100 w-full rounded-box shadow"
+			class="menu dropdown-content bg-base-200 w-full rounded-box shadow"
 			x-data="{ option: 0 }"
 			x-on:search-up.window="option = Math.max(option-1, 0)"
 			x-on:search-down.window="option = Math.min(option+1, htmx.findAll($el, 'li').length-1)"
@@ -80,7 +80,14 @@ templ (c SearchComponent) searchOptions(chunks []document.DocumentChunk) {
 				}}
 				<li>
 					@gong.NewLink("/docs" + option.ID).WithAttrs(attrs) {
-						{ option.Name }
+						<div class="flex flex-col">
+							<div>
+								{ option.Name }
+							</div>
+							<div class="text-xs text-current/50">
+								{ option.Document }
+							</div>
+						</div>
 					}
 				</li>
 			}
