Add logo assets and integrate across the app

--- a/ui/root.templ
+++ b/ui/root.templ
@@ -16,7 +16,7 @@ templ head() {
 		<meta charset="utf-8"/>
 		<title>Gong</title>
 		<link href="/public/index.css" rel="stylesheet"/>
-		<link rel="icon" type="image/png" href="/public/icon.png"/>
+		<link rel="icon" type="image/png" href="/public/icon_2.png"/>
 		<link id="prism-stylesheet" href="/public/prism-dark.css" rel="stylesheet"/>
 		<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
 		<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
