--- a/ui/landing.templ
+++ b/ui/landing.templ
@@ -15,38 +15,19 @@ templ (c LandingPageComponent) View() {
 		@c.Navbar
 		<div class="flex flex-col grow min-h-0 w-full">
 			<div class="flex flex-col place-items-center justify-center w-full h-full gap-12">
-				<div class="flex flex-row gap-6">
-					<div class="flex text-8xl font-bold">
+				<div class="flex flex-row gap-6 place-items-center">
+					@logoIcon("size-48 fill-current")
+					<div class="flex text-9xl font-bold">
 						Gong
 					</div>
-					<div class="flex text-xl w-80 text-wrap text-current/50 place-items-center">
-						a lightweight web framework harnessing the power of go, templ, and htmx
-					</div>
 				</div>
-				@gong.NewLink("/docs").WithAttrs(templ.Attributes{"class": "btn btn-wide"}) {
-					Get Started
+				<div class="flex text-xl w-80 text-wrap text-current/50 place-items-center">
+					a lightweight web framework harnessing the power of go, templ, and htmx
+				</div>
+				@gong.NewLink("/docs").WithAttrs(templ.Attributes{"class": "btn btn-neutral btn-wide"}) {
+					Get started
 				}
 			</div>
-			// <div class="flex h-1/2 place-items-center">
-			// 	<div class="grid grid-cols-3 gap-12 px-12">
-			// 		@card("Component-Based Architecture", "Build reusable UI elements for better maintainability and testing")
-			// 		@card("Client-Side Routing", "Enable smooth transitions while preserving browser history")
-			// 		@card("Server-Side Rendering", "Deliver optimized performance and SEO with SSR")
-			// 	</div>
-			// </div>
-		</div>
-	</div>
-}
-
-templ card(title string, desc string) {
-	<div class="card bg-base-200 shadow">
-		<div class="card-body">
-			<h1 class="card-title">
-				{ title }
-			</h1>
-			<p>
-				{ desc }
-			</p>
 		</div>
 	</div>
 }
