--- a/ui/menu.templ
+++ b/ui/menu.templ
@@ -26,7 +26,7 @@ templ Menu(props []MenuGroupProps) {
 	<div class="flex flex-col">
 		<div class="navbar px-4">
 			@gong.NewLink("/").WithAttrs(templ.Attributes{"class": "flex flex-row place-items-center gap-2 cursor-pointer"}) {
-				<image src="/public/icon.png" class="size-18 lg:size-14"></image>
+				@logoIcon("size-10 fill-current")
 				<div class="text-4xl lg:text-2xl font-bold">Gong</div>
 			}
 		</div>
